--- a/src/main/resources/templates/exito.html
+++ b/src/main/resources/templates/exito.html
@@ -3,7 +3,8 @@
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>Index</title>
+  <title>E-parking</title>
+  <link rel="shortcut icon" type="image/jpg" href="/imagenes/favicon.jpg"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
