--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,8 @@
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <title>Index</title>
+  <title>E-parking</title>
+  <link rel="icon" type="image/jpg" href="/imagenes/favicon.jpg"/>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -60,24 +61,12 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="/imagenes/Mesa de trabajo 2-100.jpg" alt="" class="d-block" style="width:100%">
-        <div class="carousel-caption">
-          <h3></h3>
-          <p></p>
-        </div>
       </div>
       <div class="carousel-item">
         <img src="/imagenes/Mesa de trabajo 3-100.jpg" alt="" class="d-block" style="width:100%">
-        <div class="">
-          <h3></h3>
-          <p></p>
-        </div>
       </div>
       <div class="carousel-item">
         <img src="/imagenes/Mesa de trabajo 4-100.jpg" alt="" class="d-block" style="width:100%">
-        <div class="carousel-caption">
-          <h3></h3>
-          <p></p>
-        </div>
       </div>
     </div>
     <!-- Left and right controls/icons -->
@@ -90,10 +79,41 @@
   </div>
 
   <!-- Reemplazar esto por texto -->
-  <div class="container-fluid ">
+<!--  <div class="container-fluid ">
     <img class="img-fluid" src="/imagenes/Mesa de trabajo 6-100.jpg" alt="">
-
-  </div>
+  </div>-->
+  
+  <div class="descripcion">
+        <p>
+        <strong>eparking</strong> es una plataforma de estacionamiento para bicicletas que ofrece un sistema de fácil manejo
+        para registrar clientes y estadías diarias. Impulsamos el movimiento sustentable y por eso brindamos 
+        una solución innovadora para el cliente, recordando que el costo de mantenimiento de este tipo de estacionamientos
+        es infinitamente menor a aquel que genera uno destinado a automóviles, teniendo en cuenta que el espacio ocupado por
+        un auto equivale al que ocupan 15 bicicletas.
+        </p>
+        <div class="bloque">
+            <div>
+                <div class="encabezado">SIMPLE</div><br>
+                <div class="contenido">Es fácil de usar. Tiene una interfaz intuitiva y amigable.</div><br>
+                <div class="pie"><img src="../imagenes/carita.jpg"></div>
+            </div>
+            <div>
+                <div class="encabezado">SEGURA</div><br>
+                <div class="contenido">Guarda toda la información en un sistema de alta seguridad.</div><br>
+                <div class="pie"><img src="../imagenes/candado.jpg"></div>
+            </div>
+            <div>
+                <div class="encabezado">COMPACTA</div><br>
+                <div class="contenido">Registra a tus clientes, controla tus costos, realiza consultas de manera ágil, todo en un solo lugar.</div><br>
+                <div class="pie"><img src="../imagenes/agenda.jpg"></div>
+            </div>
+            <div>
+                <div class="encabezado">COMPROMETIDA</div><br>
+                <div class="contenido">Colabora en el estímulo y la difusión de prácticas amigables con el medio ambiente.</div><br>
+                <div class="pie"><img src="../imagenes/eco.jpg"></div>
+            </div>
+        </div>
+    </div>
   
   <div class="container my-5 ">
     <div class="row text-center">
