--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,12 +10,12 @@ body{
 }
 
 .btn-xl {
-  
-  padding: 1rem 1.5rem;
-  font-size: 1rem;
-  font-weight: 600;
-  letter-spacing: 0.1rem;
-  border-radius: 2rem;
+
+    padding: 1rem 1.5rem;
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    border-radius: 2rem;
 }
 
 
@@ -30,83 +30,134 @@ body{
     background-size: cover;
 }
 
+/*.navbar-nav > li {
+    float: inline-start;
+    display: inlin-block;
+}
 
-  
+.carousel-item {
+    object-fit: cover;
+    width: 100%;
+    height: 100vh;
+}*/
 
-  /*.navbar-nav > li {
-      float: inline-start;
-      display: inlin-block;
-    }
+.social {
+    position:fixed; /* Hacemos que la posición en pantalla sea fija para que siempre se muestre en pantalla*/
+    right: 0; /* Establecemos la barra en la izquierda */
+    top: 200px; /* Bajamos la barra 200px de arriba a abajo */
+    z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga algún otro elemento como sliders, galerías, etc */
+}
 
-    .carousel-item {
-        object-fit: cover;
-        width: 100%;
-        height: 100vh;
-     }*/
+.social ul {
+    list-style: none;
+}
 
-
-         
-    
-       
-     
-     .social {
-        position:fixed; /* Hacemos que la posición en pantalla sea fija para que siempre se muestre en pantalla*/
-        right: 0; /* Establecemos la barra en la izquierda */
-        top: 200px; /* Bajamos la barra 200px de arriba a abajo */
-        z-index: 2000; /* Utilizamos la propiedad z-index para que no se superponga algún otro elemento como sliders, galerías, etc */
-    }
-    
-        .social ul {
-            list-style: none;
-        }
-    
-        .social ul li a {
-            display: inline-block;
-            color:#fff;
-            background: #000;
-            padding: 10px 15px;
-            text-decoration: none;
-            -webkit-transition:all 500ms ease;
-            -o-transition:all 500ms ease;
-            transition:all 500ms ease; /* Establecemos una transición a todas las propiedades */
-        }
-    
-    
-        .social ul li a:hover {
-            background: #000; /* Cambiamos el fondo cuando el usuario pase el mouse */
-            padding: 10px 30px; /* Hacemos mas grande el espacio cuando el usuario pase el mouse */
-        }
+.social ul li a {
+    display: inline-block;
+    color:#fff;
+    background: #000;
+    padding: 10px 15px;
+    text-decoration: none;
+    -webkit-transition:all 500ms ease;
+    -o-transition:all 500ms ease;
+    transition:all 500ms ease; /* Establecemos una transición a todas las propiedades */
+}
 
 
-     .img{
-         background-image: url("/imagenes/@maximilianoconforti\ -\ 0107.jpg");
-         background-repeat: no-repeat;
-         background-size: cover;
-     }
-     
-     
-      .mepasogi {
-        height: 6vh;
-        display: flex;
-        justify-content: right;
-        align-items: right;
-    }
-    
-    
-    .mepasogi2 {
-        height: 6vh;
-        display: flex;
-        justify-content: right;
-        align-items: right;
-    }
-    
-    
-     .row1{
-        display: block;
+.social ul li a:hover {
+    background: #000; /* Cambiamos el fondo cuando el usuario pase el mouse */
+    padding: 10px 30px; /* Hacemos mas grande el espacio cuando el usuario pase el mouse */
+}
+
+
+.img{
+    background-image: url("/imagenes/@maximilianoconforti\ -\ 0107.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+.mepasogi {
+    height: 6vh;
+    display: flex;
+    justify-content: right;
+    align-items: right;
+}
+
+
+.mepasogi2 {
+    height: 6vh;
+    display: flex;
+    justify-content: right;
+    align-items: right;
+}
+
+
+.row1{
+    display: block;
     overflow: scroll; 
-       
-       height: 300px;  
-         
-         
-     }
+    height: 300px;  
+}
 
+p {
+    text-align: justify
+} 
+
+/*Agregado a la actualización*/ 
+
+.descripcion{
+    border-top: 15px solid #36c973;
+    border-bottom: 15px solid #36c973;
+    font-size: 130%;
+    margin-top: 2.5%;
+    padding: 20px 9%;
+    line-height: 140%
+}
+
+p::first-letter{
+    font-size: 180%;
+}
+
+.bloque{
+    display: table;
+    padding: 5px 0px;
+    margin: auto;
+}
+
+.bloque div{
+    display: inline-table;
+    position: relative;
+    margin: auto 5px;
+    padding: 6px -20px;
+}
+
+.bloque div .encabezado {
+    display: table;
+    top: 45px;
+    border-radius: 0.5em;
+    margin: 0 auto;
+    color: beige;
+    background-color: #101214;
+    padding: 1px;
+    z-index: 100;
+}
+
+.bloque div .contenido{
+    display: block;
+    background: linear-gradient(rgb(20, 143, 26),white,white, white, white);
+    padding: 2em 1em 3em;
+    border: 1.5px solid black;
+    border-radius: 2em;
+    margin: 0 auto;
+    width: 250px;
+    height: 250px;
+    line-height: 100%;
+}
+
+.bloque div .pie{
+    display: table;
+    border: 0px;
+    top: -70px;
+    margin: 0 auto;
+    z-index: 100;
+}
