--- a/src/main/resources/templates/cliente.html
+++ b/src/main/resources/templates/cliente.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="C:\Users\Gina\Desktop\PRUEBA PROYECTO\imagenes\favicon.png">
+    <link rel="shortcut icon" type="image/jpg" href="/imagenes/favicon.jpg"/>
     <link rel="stylesheet" href="/css/style.css">
     <title>E Parking</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
