--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="C:\Users\Gina\Desktop\PRUEBA PROYECTO\imagenes\favicon.png">
   <link rel="stylesheet" href="/css/style.css">
-  <title>Prueba Proyecto Login</title>
+  <title>E-parking</title>
+  <link rel="shortcut icon" type="image/jpg" href="/imagenes/favicon.jpg"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
